--- a/example/licenses/.artifactignore
+++ b/example/licenses/.artifactignore
@@ -2,3 +2,9 @@
 # Examples:
 # com.example:artifact-name
 # com.example:*
+
+# License Scribe plugin internal dependencies
+net.syarihu:license-scribe-core*
+com.squareup:kotlinpoet*
+org.jetbrains.kotlin:kotlin-reflect*
+org.yaml:snakeyaml*
