refactor: split core into runtime and core modules
- Add license-scribe-runtime module with minimal dependencies
  - Contains only LicenseInfo and LicenseProvider
  - No external dependencies (SnakeYAML, KotlinPoet excluded)
- Update license-scribe-core to depend on runtime via api
- Update example to use runtime instead of core
- Update documentation and build configuration

This reduces APK size for apps using the plugin by excluding
build-time dependencies (SnakeYAML, KotlinPoet) from runtime.

--- a/example/licenses/.artifactignore
+++ b/example/licenses/.artifactignore
@@ -3,8 +3,5 @@
 # com.example:artifact-name
 # com.example:*
 
-# License Scribe plugin internal dependencies
-net.syarihu:license-scribe-core*
-com.squareup:kotlinpoet*
-org.jetbrains.kotlin:kotlin-reflect*
-org.yaml:snakeyaml*
+# License Scribe runtime (self-reference)
+net.syarihu:license-scribe-runtime*
