--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,14 +19,17 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@4d9f0ba0025fe599b4ebab900eb7f3a1d93ef4c2 # v5.0.0
 
+      - name: Build and test runtime module
+        run: ./gradlew :license-scribe-runtime:build -PexcludeExample --no-configuration-cache
+
       - name: Build and test core module
         run: ./gradlew :license-scribe-core:build -PexcludeExample --no-configuration-cache
 
-      - name: Build and test plugin module
-        run: ./gradlew :license-scribe-gradle-plugin:build -PexcludeExample --no-configuration-cache
+      - name: Build and test plugin modules
+        run: ./gradlew :license-scribe-gradle-plugin:build :license-scribe-hilt-plugin:build -PexcludeExample --no-configuration-cache
 
-      - name: Publish plugin to Maven Local
-        run: ./gradlew :license-scribe-core:publishToMavenLocal :license-scribe-gradle-plugin:publishToMavenLocal -PexcludeExample --no-configuration-cache
+      - name: Publish all modules to Maven Local
+        run: ./gradlew :license-scribe-runtime:publishToMavenLocal :license-scribe-core:publishToMavenLocal :license-scribe-gradle-plugin:publishToMavenLocal :license-scribe-hilt-plugin:publishToMavenLocal -PexcludeExample --no-configuration-cache
 
       - name: "Test: checkLicenses passes with valid definitions"
         run: ./scripts/test-check-valid.sh
