feat: add Maven Central publishing support via NMCP
- Add Dokka plugin for Javadoc generation
- Add NMCP aggregation plugin for Central Portal publishing
- Configure POM metadata (name, description, url, licenses, developers, scm)
- Add sources and javadoc JAR generation
- Add GPG signing configuration
- Use Dokka V1 mode (V2 doesn't support Javadoc yet)

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,5 +3,8 @@ org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.configuration-cache=true
 
+# Dokka - using V1 mode for Javadoc generation (V2 doesn't support Javadoc yet)
+org.jetbrains.dokka.experimental.gradle.pluginMode=V1Enabled
+
 # Android
 android.useAndroidX=true
