--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,6 +6,8 @@ ktlint = "1.0.1"
 snakeyaml = "2.5"
 kotlinpoet = "2.2.0"
 kotest = "6.0.7"
+dokka = "2.0.0"
+nmcp = "1.3.0"
 compose-bom = "2025.12.01"
 androidx-core = "1.17.0"
 androidx-lifecycle = "2.10.0"
@@ -41,3 +43,5 @@ kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "ko
 android-application = { id = "com.android.application", version.ref = "agp" }
 android-library = { id = "com.android.library", version.ref = "agp" }
 spotless = { id = "com.diffplug.spotless", version.ref = "spotless" }
+dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
+nmcp-aggregation = { id = "com.gradleup.nmcp.aggregation", version.ref = "nmcp" }
