--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,10 +1,14 @@
-name: CI
+name: Build and Test
 
 on:
+  push:
+    branches:
+      - main
+  pull_request:
   workflow_dispatch:
 
 jobs:
-  build-and-verify:
+  build-and-test:
     runs-on: ubuntu-latest
 
     steps:
