refactor: align naming with License Scribe's "scribe" theme
- Rename config files: artifact-definitions.yml -> scribe-records.yml,
  license-catalog.yml -> scribe-catalog.yml, .artifactignore -> .scribeignore
- Rename model classes: ArtifactDefinition -> Record, ArtifactGroup -> RecordGroup,
  ScopedArtifacts -> ScopedRecords, LicenseCatalog -> Catalog
- Rename parser classes: ArtifactDefinitionsParser -> RecordsParser,
  LicenseCatalogParser -> CatalogParser
- Rename extension properties: artifactDefinitionsFile -> recordsFile,
  licenseCatalogFile -> catalogFile, artifactIgnoreFile -> ignoreFile
- Rename tasks to scribeLicenses{Variant}{Action} pattern
- Add Concept section to README.md explaining the scribe theme
- Update test scripts with new task names

--- a/example/licenses/scribe-catalog.yml
+++ b/example/licenses/scribe-catalog.yml
@@ -1,4 +1,4 @@
-apache-2.0: {name: 'The Apache License, Version 2.0', url: 'http://www.apache.org/licenses/LICENSE-2.0.txt'}
+apache-2.0: {name: Apache-2.0, url: 'http://www.apache.org/licenses/LICENSE-2.0.txt'}
 mit: {name: MIT License, url: 'https://opensource.org/licenses/MIT'}
 bsd-3-clause: {name: BSD 3-Clause License, url: 'https://opensource.org/licenses/BSD-3-Clause'}
 bsd-2-clause: {name: BSD 2-Clause License, url: 'https://opensource.org/licenses/BSD-2-Clause'}
