refactor: use Gradle embedded Kotlin to avoid affecting consumer projects
- Use embeddedKotlinVersion in settings.gradle.kts for Kotlin plugins
- Remove Kotlin version definitions from libs.versions.toml
- Add compileOnly(kotlin("stdlib")) to core and runtime modules
- Set kotlin.stdlib.default.dependency=false in gradle.properties

This prevents the plugin's Kotlin version from affecting the Kotlin
version of projects that consume this library.

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,5 +6,8 @@ org.gradle.configuration-cache=true
 # Dokka - using V1 mode for Javadoc generation (V2 doesn't support Javadoc yet)
 org.jetbrains.dokka.experimental.gradle.pluginMode=V1Enabled
 
+# Kotlin - disable automatic kotlin-stdlib dependency
+kotlin.stdlib.default.dependency=false
+
 # Android
 android.useAndroidX=true
