refactor: change Maven group ID from net.syarihu to net.syarihu.licensescribe
Update group ID to follow Maven naming best practices for multi-module
projects. This provides better namespace isolation and prevents potential
conflicts with future libraries.

--- a/example/licenses/debug/scribe-licenses.yml
+++ b/example/licenses/debug/scribe-licenses.yml
@@ -474,7 +474,7 @@ licenses:
         url: https://github.com/square/retrofit
         copyrightHolders:
         - Square, Inc.
-      net.syarihu:
+      net.syarihu.licensescribe:
       - name: license-scribe-runtime
         url: https://github.com/syarihu/license-scribe-plugin
         copyrightHolders:
