--- a/example/licenses/release/scribe-licenses.yml
+++ b/example/licenses/release/scribe-licenses.yml
@@ -450,7 +450,7 @@ licenses:
         url: https://github.com/square/retrofit
         copyrightHolders:
         - Square, Inc.
-      net.syarihu:
+      net.syarihu.licensescribe:
       - name: license-scribe-runtime
         url: https://github.com/syarihu/license-scribe-plugin
         copyrightHolders:
