test: add CI test script for Hilt plugin with example-hilt project
- Add example-hilt module for testing license-scribe-hilt plugin
- Create scripts/test-generate-hilt.sh to verify Hilt module generation
- Add Hilt and KSP dependencies to version catalog
- Update CI workflow and Makefile to run Hilt tests

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -53,5 +53,8 @@ jobs:
       - name: "Test: generateLicenseCode creates valid Kotlin"
         run: ./scripts/test-generate.sh
 
+      - name: "Test: generateHiltModule creates valid Hilt module"
+        run: ./scripts/test-generate-hilt.sh
+
       - name: "Test: Configuration Cache compatibility"
         run: ./scripts/test-configuration-cache.sh
