refactor: centralize version management in gradle.properties
- Add VERSION_NAME property to gradle.properties for single-source version control
- Update all module build.gradle.kts files to reference VERSION_NAME property
- Simplifies release process by requiring only one version change

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,6 @@ kotlin.stdlib.default.dependency=false
 
 # Android
 android.useAndroidX=true
+
+# Project version (centralized)
+VERSION_NAME=0.1.0-SNAPSHOT
