--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,8 @@ compose-bom = "2025.12.01"
 androidx-core = "1.17.0"
 androidx-lifecycle = "2.10.0"
 androidx-activity = "1.12.2"
+androidx-appcompat = "1.7.0"
+androidx-recyclerview = "1.4.0"
 retrofit = "3.0.0"
 hilt = "2.57.2"
 ksp = "2.2.20-2.0.4"
@@ -34,7 +36,10 @@ compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling" }
 # AndroidX
 androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "androidx-core" }
 androidx-lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "androidx-lifecycle" }
+androidx-activity = { module = "androidx.activity:activity", version.ref = "androidx-activity" }
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activity" }
+androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "androidx-appcompat" }
+androidx-recyclerview = { module = "androidx.recyclerview:recyclerview", version.ref = "androidx-recyclerview" }
 # Hilt
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
 hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hilt" }
